// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns contact with email only 1`] = `
Object {
  "contacts": Array [
    Object {
      "cid": 42,
      "email": "a@a.ru",
      "lastUsage": undefined,
      "name": "",
      "phones": Array [],
      "ref": "ref-a@a.ru",
      "title": undefined,
    },
  ],
  "groups": Array [],
}
`;

exports[`returns contact with last organization 1`] = `
Object {
  "contacts": Array [
    Object {
      "cid": 42,
      "email": "email2@yandex.ru",
      "lastUsage": 12345,
      "name": "mr last",
      "phones": Array [],
      "ref": "ref-email2@yandex.ru",
      "title": "Мяукать",
    },
  ],
  "groups": Array [],
}
`;

exports[`returns contact with organization 1`] = `
Object {
  "contacts": Array [
    Object {
      "cid": 42,
      "email": "email2@yandex.ru",
      "lastUsage": 12345,
      "name": "mr last",
      "phones": Array [],
      "ref": "ref-email2@yandex.ru",
      "title": "Умилять",
    },
  ],
  "groups": Array [],
}
`;

exports[`returns contact without email 1`] = `
Object {
  "contacts": Array [
    Object {
      "cid": 42,
      "email": "",
      "lastUsage": undefined,
      "name": "first",
      "phones": Array [],
      "ref": undefined,
      "title": undefined,
    },
  ],
  "groups": Array [],
}
`;

exports[`returns contact without organizations 1`] = `
Object {
  "contacts": Array [
    Object {
      "cid": 42,
      "email": "email2@yandex.ru",
      "lastUsage": 12345,
      "name": "mr last",
      "phones": Array [],
      "ref": "ref-email2@yandex.ru",
      "title": undefined,
    },
  ],
  "groups": Array [],
}
`;

exports[`returns contacts 1`] = `
Object {
  "contacts": Array [
    Object {
      "cid": 42,
      "email": "email1@yandex.ru",
      "lastUsage": 0,
      "name": "mr last",
      "phones": Array [],
      "ref": "ref-email1@yandex.ru",
      "title": undefined,
    },
    Object {
      "cid": 42,
      "email": "email2@yandex.ru",
      "lastUsage": 12345,
      "name": "mr last",
      "phones": Array [],
      "ref": "ref-email2@yandex.ru",
      "title": undefined,
    },
    Object {
      "cid": 43,
      "email": "",
      "lastUsage": undefined,
      "name": "mr last",
      "phones": Array [],
      "ref": undefined,
      "title": undefined,
    },
  ],
  "groups": Array [],
}
`;

exports[`returns groups 1`] = `
Object {
  "contacts": Array [],
  "groups": Array [
    Object {
      "contacts": Array [
        Object {
          "cid": 42,
          "email": "email1@yandex.ru",
          "lastUsage": 0,
          "name": "mr last",
          "phones": Array [],
          "ref": "ref-email1@yandex.ru",
          "title": undefined,
        },
        Object {
          "cid": 42,
          "email": "email2@yandex.ru",
          "lastUsage": 12345,
          "name": "mr last",
          "phones": Array [],
          "ref": "ref-email2@yandex.ru",
          "title": undefined,
        },
      ],
      "id": 13,
      "tid": 13,
      "title": "Super Group",
    },
  ],
}
`;
